--- a/DapperExample.UI/Views/ToDo/Index.cshtml
+++ b/DapperExample.UI/Views/ToDo/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using DapperExample.Entities
 @model List<TodoItem>
 @{
-	Layout = null;
+	Layout = "~/Views/Shared/_NewLayout.cshtml";
 }
 <!--
 =========================================================
@@ -20,24 +20,6 @@
 -->
 <!DOCTYPE html>
 <html>
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-	<meta name="author" content="Creative Tim">
-	<title>Asp.Net Core 6.0 | Crud Operations With Dapper</title>
-	<!-- Favicon -->
-	<link rel="icon" href="~/argon-dashboard-master/assets/img/brand/favicon.png" type="image/png">
-	<!-- Fonts -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
-	<!-- Icons -->
-	<link rel="stylesheet" href="~/argon-dashboard-master/assets/vendor/nucleo/css/nucleo.css" type="text/css">
-	<link rel="stylesheet" href="~/argon-dashboard-master/assets/vendor/fontawesome-free/css/all.min.css" type="text/css">
-	<!-- Argon CSS -->
-	<link rel="stylesheet" href="~/argon-dashboard-master/assets/css/argon.css?v=1.2.0" type="text/css">
-</head>
-
 <body>
 	<!-- Sidenav -->
 	<!-- Main content -->
@@ -85,7 +67,7 @@
 											@item.Status
 										</td>
 										<td>
-											<a class="btn btn-outline-danger">Sil</a>
+											<a href="/ToDo/DeleteTodo/@item.Id" class="btn btn-outline-danger">Sil</a>
 										</td>
 										<td>
 											<a class="btn btn-outline-warning">Düzenle</a>
@@ -183,4 +165,4 @@
 			@*	</tr>
 			}
 	</table>*@
-<a href="/Skill/AddSkill/" class="btn btn-primary">Yeni Yapılacak Ekle</a>
+<a href="/ToDo/AddTodo/" class="btn btn-primary">Yeni Yapılacak Ekle</a>
