Silme işlemi gerçekleştirildi.

--- a/DapperExample.UI/Views/ToDo/Index.cshtml
+++ b/DapperExample.UI/Views/ToDo/Index.cshtml
@@ -67,10 +67,10 @@
 											@item.Status
 										</td>
 										<td>
-											<a href="/ToDo/DeleteTodo/@item.Id" class="btn btn-outline-danger">Sil</a>
+											<a href="/ToDo/RedirectToDelete/@item.Id" class="btn btn-outline-danger">Sil</a>
 										</td>
 										<td>
-											<a class="btn btn-outline-warning">Düzenle</a>
+											<a href="/ToDo/RedirectToUpdate/@item.Id" class="btn btn-outline-warning">Düzenle</a>
 										</td>
 									</tr>
 								}
