Güncelleme işlemi gerçekleştirildi.

--- a/DapperExample.UI/Views/ToDo/AddTodo.cshtml
+++ b/DapperExample.UI/Views/ToDo/AddTodo.cshtml
@@ -3,8 +3,6 @@
 @{
 	Layout = "~/Views/Shared/_NewLayout.cshtml";
 }
-@*@using (Html.BeginForm("AddTodo", "ToDo", FormMethod.Post))
-{*@
     <div class="col-12 grid-margin stretch-card">
 		<div class="card">
 			<div class="card-body">
@@ -22,4 +20,4 @@
 			</div>
 		</div>
 	</div>
-@*}*@
+<a href="/ToDo/Index/" class="btn btn-primary">Ana sayfaya dön</a>
